# talenscan

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUTH_MULTITENANT_PLAN.md  DECISION_ROOM_PLAN.md  README.md  TALENT_MARKET_MAP_PLAN.md  Talencan.docx  Talenscan_Decision_Room_Instrucciones_Claude_Code.docx  Talent Market Map.docx  fly.toml  package-lock.json  package.json  wrangler.worker.jsonc
apps/api/: .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260523_01_create_search_mandates.py  20260523_02_expand_search_mandates.py  20260523_03_create_position_candidates_and_evaluations.py  20260523_04_create_pipeline_items.py  20260524_05_add_target_hire_date.py  20260525_06_candidate_profile_doc_nullable.py  20260527_07_create_client_shortlists.py  20260527_08_decision_room.py  20260529_09_talent_market_map.py  20260530_10_talent_vault.py  20260530_11_auth_orgs.py
apps/api/app/: main.py
apps/api/app/ai/: candidate_profile_parser.py  evaluator.py  linkedin_apify.py  openai_client.py  position_spec_generator.py  talent_market_map_generator.py
apps/api/app/core/: auth.py  config.py  oauth.py  security.py
apps/api/app/db/: base.py  (+1 more)
apps/api/talenscan_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_auth_domain.py  test_auth_flow.py  test_auth_middleware.py  test_auth_oauth.py  test_candidates_evaluations.py  test_decision_room.py  test_health.py  test_mandates.py  test_models.py  test_position_specs.py  test_talent_market_map.py  test_talent_vault.py
(+145 files in other folders)
