[project]
name = "talenscan-api"
version = "0.1.0"
description = "Backend FastAPI para Talenscan"
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.116.0",
  "fpdf2>=2.8.5",
  "jinja2>=3.1.0",
  "openai>=1.55.0",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.20",
  "pypdf>=6.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
  "weasyprint>=63.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.0"
]

[build-system]
requires = ["setuptools>=75", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]